# HSE_NaOM_S2024

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: CBPlotCreator.py
data/: Cannon_angle_results.data  Cannon_best_angle_data.json  Exp.data  satellite.ipynb
diff/: Diff.h  Diff.hpp  TestDiff.hpp
diff/methods/: FwdAAD.hpp
diff/test/: Functions.h  TestObject.h
exp/: CMakeLists.txt  Consts.hpp  Exp.hpp  Fourier_temp.cpp  TestExp.cpp  TestExp.hpp  data.txt
exp/methods/: ChebyshevExponential.hpp  FourierExponential.hpp  PadeExponential.hpp  TaylorExponential.hpp
exp/test/: TestCases.cpp  TestObjects.hpp
integration/: integration.cpp  integration.hpp
integration/cannon_ball/: State.hpp
integration/cannon_problem/: Cannon.cpp  CannonBall.hpp
integration/environment/: AirDensity.hpp  ComputeFunctions.hpp  DrugCoefficient.hpp
integration/intergartor/: Interator.hpp  Observer.hpp  RHS.hpp  Stepper.hpp
integration/intergartor/steppers/: BasicTimeStepper.hpp  EverhartStepper.hpp  RFK45_TimeStepper.hpp
integration/orbital_problem/: Satellite.hpp  SatelliteLauncher.cpp
integration/pde_bsm/: AnalyticalSolution.hpp  AucLauncher.cpp  AucRHS.hpp  AuxiliaryFunctions.hpp
integration/pde_bsm/implicit/: solution.cpp
integration/pde_bsm/solutions/: AnalyticalSolution.cpp  ExplicitSolution.cpp  ImplicitSolution.cpp  NumericalSolution.cpp
lab01/: CMakeLists.txt  Consts.hpp  Exp.hpp  TestExp.cpp  main.cpp
utils/: Clock.hpp  Consts.hpp  Math.hpp  Tester.hpp
